test/Fail/Issue7777.err
Issue7777.agda:8.10: error: [ParseError]
Conflicting relevance information
